--- a/index.html
+++ b/index.html
@@ -9,7 +9,9 @@
 <body>
   <main>
     <div id="status">ONLINE</div>
-    <img src="https://picsum.photos/125" alt="placeholder avatar"><main>
+    <!-- <section id="image-container"> -->
+    <img src="https://picsum.photos/125" alt="placeholder avatar">
+  <!-- </section> -->
     <h1 id="name">John Shoshone</h1>
     <section id="occupation">
       <p id="stars">🌟🌟🌟🌟⭐</p>
